# OverwatcherPI

./: .dockerignore  .env.example  .gitignore  AGY.md  Dockerfile  README.md  config.py  docker-compose.yml  healthcheck.py  main.py  overwatcher-caddy.service  overwatcher-dashboard.service  overwatcher-sniffer.service  overwatcher.service  overwatcher.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: server.py
bot/: app.py  broadcaster.py  formatters.py  handlers.py  middleware.py
core/: arp_watcher.py  ble_proximity.py  ble_vendors.py  database.py  db.py  dhcp_watcher.py  dns_blocklist.py  dns_watcher.py  honeypot.py  job_queue.py  logging_setup.py  oui.py  ping_utils.py  scan_detector.py  scan_limits.py  scheduler.py  ssh_watcher.py  threat_intel.py
dashboard/: Caddyfile  Dockerfile  app.py  db.py  requirements-dashboard.txt  start_dashboard.sh  stop_dashboard.sh
dashboard/pages/: 1_Device_History.py  2_Alerts.py
dashboard/views/: 0_Overview.py  1_Device_History.py  2_Alerts.py  3_Device_Detail.py  4_Security_Posture.py  4_Threat_Map.py  5_Timeline.py  5_Trends.py  6_Alerts.py
docs/: SUPABASE_MIGRATION_PLAN.md  docker.md
overwatcherpi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scanners/: bluetooth.py  network.py  ssdp.py
scripts/: check_env.py  init_supabase_schema.py  migrate_to_supabase.py
tests/: test_config.py  test_database.py  test_metrics.py
utils/: metrics.py  osint.py
