[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "overwatcherpi"
version = "1.0.0"
description = "Production-Grade Raspberry Pi Network & Environment Monitor"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot==22.8",
    "bleak==3.0.2",
    "pydantic-settings==2.14.2",
    "aiosqlite==0.22.1",
    "aiohttp==3.14.1",
    "apscheduler==3.11.3",
    "psutil>=5.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
