[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "overwatcherpi"
version = "1.0.0"
description = "Production-Grade Raspberry Pi Network & Environment Monitor"
authors = [
    {name = "CoreOps", email = "coreops@overwatcher.local"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot==22.8",
    "bleak==3.0.2",
    "pydantic-settings==2.14.2",
    "sherlock-project==0.16.0",
    "pydantic==2.13.4",
    "aiosqlite==0.22.1",
    "aiohttp==3.14.1",
    "apscheduler==3.11.3",
    "psutil==7.2.2",
    "scapy==2.7.0",
    "zeroconf==0.150.0",
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "speedtest-cli==2.1.3"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
